@@ -1,5 +1,9 @@
 2010-05-01  James Youngman  <jay@gnu.org>
 
+	Avoid reading uninitialised input.
+	* encoding.cc (encode_line): Encode the tail of the input without
+	running over the end of in[].
+
 	Handling of directories in get is mandatory in POSIX, so remove CONFIG_NO_DIRECTORY.
 	* fileiter.cc: don't define CONFIG_NO_DIRECTORY
 	(sccs_file_iterator::sccs_file_iterator): don't check CONFIG_NO_DIRECTORY
